--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -42,10 +42,8 @@ jobs:
 
       - name: Upload binaries to release
         if: ${{ (github.event_name != 'pull_request') && (startsWith(github.ref, 'refs/tags/v')) }}
-        uses: svenstaro/upload-release-action@v2
+        uses: softprops/action-gh-release@v2
         with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: assets/*
-          tag: ${{ github.ref }}
-          overwrite: true
-          file_glob: true
+          files: |
+            *.tar.gz
+            *.zip
